<resources>
    <string name="app_name">ECNU大鱼</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_stuid">学号(选填)</string>
    <string name="prompt_mobile">手机(必填)</string>
    <string name="prompt_age">年龄(选填)</string>
    <string name="prompt_sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">非法email地址</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码或用户名错误</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="permission_rationale">"需要联系人权限以提供姓名匹配"</string>
    <string name="action_mobile_verify">验证</string>
    <string name="action_forget"><u>忘记密码?</u></string>
    <string name="prompt_input_mobile">输入手机号</string>
    <string name="prompt_input_captcha">输入图中的字符</string>
    <string name="action_forget_go">下一步</string>
    <string name="prompt_forget_new_pwd">新密码</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_transact_rule">交易须知</string>
    <string name="prompt_transact_announce">交易区公告</string>
    <string name="test_desc">描述</string>
    <string name="sell_item_name">出售的商品名称</string>
    <string name="prompt_title">标题(最多10个字)</string>
    <string name="prompt_describe_dw">描述你的求助(最多1000个字)</string>
    <string name="prompt_force_logout">检测到账户在别处登录，请注意账户安全并重新登录</string>
    <string name="prompt_change_person_info">更改</string>
    <string name="prompt_change_pwd"><u>更改密码</u></string>
</resources>
