<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/id_forget_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_input_mobile"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/id_forget_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_forget_new_pwd"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/id_forget_edt_captcha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_input_captcha"/>
        <ImageView
            android:id="@+id/id_forget_captcha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/id_forget_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/action_forget_go"
        android:background="@drawable/btn_bg_secondary"/>

</LinearLayout>