<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#e6e6e6"
    android:padding="8dp">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">
                    <EditText
                        android:id="@+id/id_register_edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:padding="4dp">
                    <EditText
                        android:id="@+id/id_register_edt_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
                <ImageView
                    android:id="@+id/id_register_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/userdefault"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">
                    <EditText
                        android:id="@+id/id_register_edt_stuid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_stuid"
                        android:maxLines="1"
                        android:inputType="number"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:padding="4dp">
                    <EditText
                        android:id="@+id/id_register_edt_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_age"
                        android:maxLines="1"
                        android:inputType="numberSigned"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_sex"
                    android:textSize="20sp"
                    android:padding="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="left|center_vertical"/>
                <RadioGroup
                    android:id="@+id/id_register_radio_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="4dp"
                    android:padding="4dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/id_register_radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="18sp"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/id_register_radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="18sp" />
                </RadioGroup>
                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/id_register_edt_mobile_container"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp">
                        <EditText
                            android:id="@+id/id_register_edt_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_mobile"
                            android:maxLines="1"
                            android:inputType="phone"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/id_register_mobile_verify"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/action_mobile_verify"
                        android:textSize="14sp"
                        android:textColor="#ffffff"
                        android:background="@drawable/btn_bg_big"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/id_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/action_register"
            android:background="@drawable/btn_bg_big"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

    </LinearLayout>
</ScrollView>