<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.jimmyhsu.ecnudaowei.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <View
        android:id="@+id/head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="-4dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tou"/>


    <android.support.v7.widget.CardView
        android:id="@+id/login_form"
        app:cardElevation="10dp"
        android:layout_below="@id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="0dp"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:background="@drawable/btn_bg_big"
                android:textStyle="bold" />
            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:elevation="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_bg_secondary"
                android:text="@string/action_register" />
            <TextView
                android:id="@+id/id_forget_pwd"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_forget"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--<View-->
        <!--android:id="@+id/left_hand"-->
        <!--android:layout_width="18dp"-->
        <!--android:layout_height="10dp"-->
        <!--android:layout_toLeftOf="@id/head"-->
        <!--android:layout_above="@id/login_form"-->
        <!--android:layout_marginRight="12dp"-->
        <!--android:layout_marginBottom="4dp"-->
        <!--android:elevation="10dp"-->
        <!--android:background="@drawable/hand"/>-->
    <!--<View-->
        <!--android:id="@+id/right_hand"-->
        <!--android:layout_width="18dp"-->
        <!--android:layout_height="10dp"-->
        <!--android:layout_toRightOf="@id/head"-->
        <!--android:layout_marginBottom="4dp"-->
        <!--android:layout_above="@id/login_form"-->
        <!--android:elevation="10dp"-->
        <!--android:layout_marginLeft="12dp"-->
        <!--android:background="@drawable/hand"/>-->
</RelativeLayout>
